--- a/.github/workflows/steelsung-api.yml
+++ b/.github/workflows/steelsung-api.yml
@@ -4,7 +4,7 @@ on:
     branches: [ master ]
     paths:
       - 'src/**'
-      - '.github/workflows/steelsung-api.yaml'
+      - '.github/workflows/steelsung-api.yml'
 
 jobs:
   project-build:
