fix():Fixed deployment issue

--- a/.github/workflows/steelsung-api.yml
+++ b/.github/workflows/steelsung-api.yml
@@ -26,8 +26,18 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Install Maven dependencies
-        run: mvn install
+      - name: Install Maven dependencies & generate jar
+        run: mvn clean package
+
+      - name: Rename artifact
+        run: cp target/steelsung-api-0.0.1-SNAPSHOT.jar steelsung-api-1.jar
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@master
+
+        with:
+          name: steelsung-api-artifact
+          path: steelsung-api-1.jar
 
   deploy:
     if: ${{ github.ref == 'refs/heads/master' }}
@@ -35,12 +45,16 @@ jobs:
     needs:
       - project-build
     steps:
-      - uses: actions/checkout@v3
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: steelsung-api-artifact
+
       - name: Push to Dev server with SSH
         env:
          SSHPASS: ${{ secrets.SSHPASS }}
          SERVER: ${{ secrets.SERVER}}
         run: |
           sudo sshpass  -p ${SSHPASS}   -v  ssh -o StrictHostKeyChecking=no root@${SERVER} 'systemctl stop steelsung.api.service'
-          sudo sshpass  -p ${SSHPASS}   -v  ssh -o StrictHostKeyChecking=no root@${SERVER} 'cp target/steelsung-api-0.0.1-SNAPSHOT.jar /home/neon/steelsung-api/steelsung-api-1.jar'
+          sudo sshpass  -p ${SSHPASS}   -v  ssh -o StrictHostKeyChecking=no root@${SERVER} 'cp steelsung-api-1.jar /home/neon/steelsung-api/steelsung-api-1.jar'
           sudo sshpass  -p ${SSHPASS}   -v  ssh -o StrictHostKeyChecking=no root@${SERVER} 'systemctl start steelsung.api.service'
