build():Deferred datasource init

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 application.security.jwt.secret-key=${JWT_SECRET}
 application.security.jwt.expiration=3600
+spring.jpa.defer-datasource-initialization=true
