--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 application.security.jwt.secret-key=${JWT_SECRET}
-application.security.jwt.expiration=3600
+application.security.jwt.expiration=3600000
 spring.jpa.defer-datasource-initialization=true
